--- a/src/styles/basic/message.less
+++ b/src/styles/basic/message.less
@@ -2,6 +2,7 @@
   min-width: 300px;
   border-radius: 12px;
   box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.12);
+  padding: 12px 20px 12px 16px;
 }
 
 @media (display-mode: standalone) {
