feat: add styles for user info dialog

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -19,6 +19,7 @@
 @import './common/bottomnotify.less';
 @import './common/maintain.less';
 @import './common/login.less';
+@import './common/userinfo.less';
 
 /* Views */
 
