--- a/src/styles/basic/layout.less
+++ b/src/styles/basic/layout.less
@@ -2,6 +2,9 @@ html {
   width: 100vw;
   min-height: 100vh;
   overflow-x: hidden;
+  overflow-y: auto;
+  overflow-y: overlay;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -18,6 +21,7 @@ body {
 @scrollbar-width: 8px;
 
 body::-webkit-scrollbar {
+  display: initial;
   width: @scrollbar-width;
   height: @scrollbar-width;
 }
@@ -28,12 +32,13 @@ body::-webkit-scrollbar-thumb {
   width: @scrollbar-width;
   border-radius: @scrollbar-width;
   background: @color-primary;
+  opacity: 0.75;
 }
 body::-webkit-scrollbar-track {
-  background: @color-background-primary;
+  background: transparent;
 }
 body::-webkit-scrollbar-corner {
-  background: @color-background-primary;
+  background: transparent;
 }
 
 .no-scrollbar {
