feat: tweak banner style

--- a/src/styles/landing/rankbox.less
+++ b/src/styles/landing/rankbox.less
@@ -97,14 +97,17 @@
 /* Mobile */
 
 @media (max-width: 767px) {
-  .rankbox {
-    span,
-    a {
-      font-size: 24px;
-    }
-    &-options {
-      &-split {
-        margin: 0 28px;
+  .rankbox-wrapper {
+    height: 200px;
+    .rankbox {
+      span,
+      a {
+        font-size: 24px;
+      }
+      &-options {
+        &-split {
+          margin: 0 28px;
+        }
       }
     }
   }
