feat: add relative attr to html and body

--- a/src/styles/basic/layout.less
+++ b/src/styles/basic/layout.less
@@ -4,12 +4,14 @@ html {
   overflow-x: hidden;
   overflow-y: auto;
   overflow-y: overlay;
+  position: relative;
 }
 
 body {
   margin: 0;
   width: 100vw;
   min-height: 100vh;
+  position: relative;
   background: @color-background-primary;
   transition: background-color 200ms ease-in-out;
   font-family: -apple-system-font, Noto Sans SC, 'MicroSoft Yahei', 'Heiti SC', 'Segoe UI', Roboto,
