--- a/src/styles/pic/download.less
+++ b/src/styles/pic/download.less
@@ -8,6 +8,7 @@
     font-weight: 600;
     letter-spacing: 0.05em;
     align-items: center;
+    text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.05);
     .no-select();
     span {
       flex: 1;
