feat: tweak page title styles

--- a/src/styles/artist/artist.less
+++ b/src/styles/artist/artist.less
@@ -27,6 +27,7 @@
       .image-page-width-responsive-mixin(2, 2, 72px);
       span,
       i {
+        text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.05);
         .no-select();
       }
       &-close {
