--- a/src/styles/rank/rank.less
+++ b/src/styles/rank/rank.less
@@ -24,6 +24,7 @@
       color: @color-text-primary;
       letter-spacing: 0.05em;
       font-weight: 600;
+      text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.05);
       &-category {
         font-size: 24px;
         margin-left: 18px;
