--- a/src/styles/search/search.less
+++ b/src/styles/search/search.less
@@ -29,6 +29,7 @@
       letter-spacing: 0.05em;
       font-weight: 600;
       display: inline-block;
+      text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.05);
     }
     &-input {
       width: 480px;
