feat: add collection page

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -30,5 +30,6 @@
 @import './usearch/usearch.less';
 @import './artist/artist.less';
 @import './history/history.less';
-@import './404/404.less';
+@import './collection/collection.less';
 @import './sponsor/sponsor.less';
+@import './404/404.less';
