--- a/src/styles/pic/presentation.less
+++ b/src/styles/pic/presentation.less
@@ -121,6 +121,15 @@
       color: @color-text-primary;
       font-family: 'Kosugi Maru', -apple-system-font, 'PingFang SC', 'MicroSoft Yahei UI',
         sans-serif;
+      .icon-star {
+        margin-right: 12px;
+        width: 30px;
+        height: 30px;
+        svg {
+          width: 30px;
+          height: 30px;
+        }
+      }
       span {
         flex: 1;
       }
