feat: catch size limit error

--- a/src/styles/collection/collection.less
+++ b/src/styles/collection/collection.less
@@ -27,12 +27,12 @@
         box-sizing: border-box;
         color: #fff;
         border-radius: 28px;
-        transform: translateY(1px);
+        transform: translateY(2px);
       }
     }
     &-close {
       transition: 200ms ease-in-out;
-      transform: translateX(6px);
+      transform: translate(6px, -2px);
       .el-icon-delete {
         margin-right: 16px;
       }
@@ -133,6 +133,7 @@
             padding: 4px 12px;
             font-size: 10px;
             margin-left: 8px;
+            transform: translateY(1px);
           }
         }
       }
