feat: add beta flag

--- a/src/styles/collection/collection.less
+++ b/src/styles/collection/collection.less
@@ -17,6 +17,12 @@
         display: flex;
         align-items: center;
       }
+      .small-flag {
+        font-size: 14px;
+        align-self: flex-end;
+        margin-bottom: 4px;
+        margin-left: 8px;
+      }
       .count-limit {
         font-size: 14px;
         line-height: 16px;
@@ -129,6 +135,11 @@
       &-title {
         font-size: 24px;
         &__left {
+          .small-flag {
+            font-size: 10px;
+            margin-bottom: 2px;
+            margin-left: 4px;
+          }
           .count-limit {
             padding: 4px 12px;
             font-size: 10px;
