feat: add anti-share page and share token

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -32,4 +32,5 @@
 @import './history/history.less';
 @import './collection/collection.less';
 @import './sponsor/sponsor.less';
+@import './anti-share/anti-share.less';
 @import './404/404.less';
