fix: announcement styles

--- a/src/styles/landing/landing.less
+++ b/src/styles/landing/landing.less
@@ -51,6 +51,12 @@
   user-select: none;
   .el-dialog {
     width: 57.5vw;
+    &__body {
+      pre {
+        font-family: -apple-system-font, Noto Sans SC, 'MicroSoft Yahei', 'Heiti SC', 'Segoe UI',
+          Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+      }
+    }
   }
 }
 
