fix: wrong style in presentation detail

--- a/src/styles/pic/presentation.less
+++ b/src/styles/pic/presentation.less
@@ -183,6 +183,9 @@
         height: 16px;
         margin-right: 5px;
       }
+      br + a {
+        margin-left: 0;
+      }
       br:last-child {
         display: none;
       }
