feat: add sync status component

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -20,6 +20,7 @@
 @import './common/maintain.less';
 @import './common/login.less';
 @import './common/userinfo.less';
+@import './common/sync.less';
 
 /* Views */
 
