--- a/src/styles/landing/landing.less
+++ b/src/styles/landing/landing.less
@@ -44,6 +44,25 @@
         margin-bottom: 0;
       }
     }
+    &-footer {
+      margin-top: 24px;
+      width: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      span,
+      a {
+        color: @color-text-black;
+        text-decoration: none;
+        font-size: 12px;
+        transition: filter 100ms ease;
+      }
+
+      a:hover {
+        filter: brightness(1.2);
+      }
+    }
   }
 }
 
