feat: remove the annoying blur effect

--- a/src/styles/landing/landing.less
+++ b/src/styles/landing/landing.less
@@ -48,11 +48,6 @@
         box-shadow: @shadow-medium;
       }
 
-      .landing-card:hover {
-        backdrop-filter: blur(5px);
-        overflow: hidden;
-      }
-
       .landing-card:last-child {
         margin-bottom: 0;
       }
@@ -68,8 +63,19 @@
 
     &__body {
       pre {
-        font-family: -apple-system-font, Noto Sans SC, 'MicroSoft Yahei', 'Heiti SC', 'Segoe UI',
-          Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        font-family:
+          -apple-system-font,
+          Noto Sans SC,
+          'MicroSoft Yahei',
+          'Heiti SC',
+          'Segoe UI',
+          Roboto,
+          Oxygen,
+          Ubuntu,
+          Cantarell,
+          'Open Sans',
+          'Helvetica Neue',
+          sans-serif;
       }
     }
   }
